--- a/web-branding-development.html
+++ b/web-branding-development.html
@@ -1,14 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="J2W offers expert Social Media & Digital Marketing services to boost your online presence and drive business growth.">
-    <meta name="keywords" content="Social Media, Digital Marketing, J2W, Branding, Online Presence">
-    <title>Social Media & Digital Marketing - J2W</title>
-    <link href="https://fonts.googleapis.com/css2?family=Caladea:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <meta name="description" content="J2W’s Web & Branding Development services create stunning websites and cohesive brand identities to elevate your business.">
+    <meta name="keywords" content="Web Development, Branding, J2W, Website Design, UX">
+    <title>Web & Branding Development - J2W</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,13 +17,39 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">J2W</div>
+            <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">
+                <i class="fas fa-bars"></i>
+            </button>
             <ul class="nav-links">
-                <li><a href="index.html#page-top">Home</a></li>
-                <li><a href="index.html#section-about">About</a></li>
-                <li><a href="index.html#section-services">Services</a></li>
-                <li><a href="index.html#section-testimonials">Testimonials</a></li>
-                <li><a href="index.html#section-customers">Customers</a></li>
-                <li><a href="index.html#section-contact">Contact</a></li>
+                <li class="dropdown">
+                    <a href="index.html#page-top" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Home <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="index.html#page-top">Top</a></li>
+                        <li><a href="index.html#section-about">About</a></li>
+                        <li><a href="index.html#section-contact">Contact</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="index.html#section-services" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Services <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="social-media-digital-marketing.html">Social Media & Digital Marketing</a></li>
+                        <li><a href="web-branding-development.html">Web & Branding Development</a></li>
+                        <li><a href="clothes-banners-marketing.html">Clothes, Banners & Marketing Material</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="index.html#section-clients" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                        Clients <i class="fas fa-chevron-down"></i>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="index.html#section-clients">Our Clients</a></li>
+                        <li><a href="index.html#section-testimonials">Testimonials</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </nav>
@@ -31,8 +58,9 @@
     <section class="service-hero">
         <div class="container">
             <div class="service-hero-content" data-aos="fade-up">
-                <h1>Social Media & Digital Marketing</h1>
-                <p>Boost your online presence with our expert social media and digital marketing strategies.</p>
+                <h1>Web & <span>Branding Development</span></h1>
+                <p>Elevate your business with stunning websites and cohesive branding.</p>
+                <a href="index.html#section-contact" class="btn hero-btn">Get Started</a>
             </div>
         </div>
     </section>
@@ -40,14 +68,14 @@
     <!-- Service Description Section -->
     <section class="service-description">
         <div class="container">
-            <div class="service-description-content" data-aos="fade-up">
+            <div class="service-description-content" data-aos="fade-right">
                 <div class="service-text">
-                    <h2>Transform Your Online Presence</h2>
-                    <p>At J2W, we specialize in crafting tailored social media and digital marketing strategies that amplify your brand’s reach and engagement. Our team leverages the latest trends and tools to create impactful campaigns across platforms like Instagram, Facebook, LinkedIn, and more. Whether you’re looking to increase followers, drive traffic, or boost conversions, we’ve got you covered with data-driven solutions.</p>
+                    <h2>Create a Lasting Impression</h2>
+                    <p>J2W designs responsive, user-friendly websites and builds powerful brand identities that captivate audiences. From sleek UI/UX to logos and style guides, we ensure your brand stands out and drives conversions.</p>
                     <a href="index.html#section-contact" class="btn request-quote">Request a Quote</a>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/social-media-digital-marketing.jpg" alt="Social Media & Digital Marketing">
+                    <img src="https://images.unsplash.com/photo-1547658719-5f8d3e1d057d" alt="Website Design Mockup" loading="lazy" srcset="https://images.unsplash.com/photo-1547658719-5f8d3e1d057d?auto=format&w=600 600w, https://images.unsplash.com/photo-1547658719-5f8d3e1d057d?auto=format&w=1200 1200w">
                 </div>
             </div>
         </div>
@@ -56,48 +84,32 @@
     <!-- Portfolio Section -->
     <section class="service-portfolio">
         <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <h2>Browse Through Our Portfolio of Stunning Campaigns</h2>
-            </div>
-            <div class="portfolio-grid" data-aos="fade-up">
-                <div class="portfolio-item">
-                    <img src="assets/images/portfolio-social-media-1.jpg" alt="Social Media Campaign 1">
-                    <h3>Campaign for Retail Brand</h3>
-                    <p>A successful Instagram campaign that increased engagement by 150%.</p>
+            <h2 data-aos="fade-up">Our Success Stories</h2>
+            <div class="portfolio-swiper swiper-container" data-aos="fade-up">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1516321310768-61f3f03a6667" alt="Corporate Website" loading="lazy">
+                            <h3>Corporate Website</h3>
+                            <p>Designed a sleek, responsive site for a tech firm.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" alt="Brand Identity" loading="lazy">
+                            <h3>Brand Identity</h3>
+                            <p>Created a bold logo and style guide for a startup.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="portfolio-item">
+                            <img src="https://images.unsplash.com/photo-1551288049-b1f3a0c3f8e7" alt="E-commerce Site" loading="lazy">
+                            <h3>E-commerce Site</h3>
+                            <p>Built a high-converting online store for retail.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="portfolio-item">
-                    <img src="assets/images/portfolio-social-media-2.jpg" alt="Social Media Campaign 2">
-                    <h3>LinkedIn B2B Strategy</h3>
-                    <p>Generated 200+ leads for a B2B client through targeted LinkedIn ads.</p>
-                </div>
-                <div class="portfolio-item">
-                    <img src="assets/images/portfolio-social-media-3.jpg" alt="Social Media Campaign 3">
-                    <h3>Facebook Ad Campaign</h3>
-                    <p>Boosted e-commerce sales by 300% with a festive season ad campaign.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Specialized Services Section -->
-    <section class="specialized-services">
-        <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <h2>Specialized Services for Social Media & Digital Marketing</h2>
-            </div>
-            <div class="specialized-services-content" data-aos="fade-up">
-                <div class="specialized-service">
-                    <h3>Content Creation</h3>
-                    <p>We create engaging content tailored to your audience, from eye-catching graphics to compelling copy.</p>
-                </div>
-                <div class="specialized-service">
-                    <h3>Ad Management</h3>
-                    <p>Our team manages your ad campaigns to maximize ROI, targeting the right audience at the right time.</p>
-                </div>
-                <div class="specialized-service">
-                    <h3>Analytics & Reporting</h3>
-                    <p>Detailed insights and reports to track your campaign performance and optimize for better results.</p>
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
@@ -105,21 +117,19 @@
     <!-- FAQ Section -->
     <section class="faq">
         <div class="container">
-            <div class="section-header" data-aos="fade-up">
-                <h2>Frequently Asked Questions</h2>
-            </div>
+            <h2 data-aos="fade-up">Frequently Asked Questions</h2>
             <div class="faq-content" data-aos="fade-up">
                 <div class="faq-item">
-                    <h3>How long does it take to see results from a digital marketing campaign?</h3>
-                    <p>Results can vary, but typically you’ll see initial engagement within 2-4 weeks, with significant growth in 3-6 months.</p>
+                    <h3>How long does a website take to build? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Most projects take 4-8 weeks, depending on complexity.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>What platforms do you focus on for social media marketing?</h3>
-                    <p>We tailor our strategies to your audience, focusing on platforms like Instagram, Facebook, LinkedIn, Twitter, and TikTok.</p>
+                    <h3>Do you offer branding packages? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Yes, we provide logo design, style guides, and more.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>Do you provide content creation services?</h3>
-                    <p>Yes, we offer full content creation services, including graphics, videos, and copywriting, to ensure your brand stands out.</p>
+                    <h3>Are your websites mobile-friendly? <i class="fas fa-chevron-down"></i></h3>
+                    <p>Absolutely, all our sites are responsive and optimized.</p>
                 </div>
             </div>
         </div>
@@ -135,16 +145,19 @@
                 </div>
                 <div class="footer-side2">
                     <ul class="social-details">
-                        <li><a href="https://www.facebook.com/profile.php?id=61561740595029" target="_blank"><i class="icon facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61561740595029" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                     </ul>
                 </div>
             </div>
         </div>
-      
-    <!-- Go to Top Button -->
-    <a id="gotoTop" class="gotoTop" href="#page-top"><i class="icon angle-up"></i></a>
+    </footer>
 
+    <!-- Go to Top Button -->
+    <a id="gotoTop" class="gotoTop" href="#page-top"><i class="fas fa-angle-up"></i></a>
+
+    <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
